src/components/App/App.css
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0px;
}

.alert {
    background-image: linear-gradient(rgba(255, 17, 0, 0.68), rgba(0, 60, 255, 0.297));
    margin: 50px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-align: center;
}

form {
    background-image: linear-gradient(rgba(0, 102, 255, 0.68), rgba(255, 77, 0, 0.297));
    width: 45%;
    height: auto;
    margin: 20px auto;
    padding: 25px;
    border-radius: 2px;
}

input {
    margin: 5px;
    margin-bottom: 10px;
}
.log-in{
    background-image: url("https://img.aws.livestrongcdn.com/ls-article-image-673/ds-photo/getty/article/74/79/90205157.jpg");
    background-repeat: no-repeat;
    margin: 20px auto;
    padding: 2px;
    border-radius: 2px;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    width: 50%;   
}
.log-in:hover, .log-out:hover, .register:hover {
  background-color: #d3d3d3;
}

/* This line makes the "Register" and "Login" buttons look like links */
.link-button {
    background:none;
    color:inherit;
    border:none;
    padding:0;
    font: inherit;
    outline:0;
    border-bottom:1px solid #444; 
    cursor: pointer;
}
#welcome{
    color:#0d1626;
    font-family: Arial, Helvetica, sans-serif;
}
#weightRoom{
    height: auto;
    margin: 20px auto;
    padding: 2px;
    border-radius: 2px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}
#exerciseTernary{
    color: rgb(28, 9, 152);
    height: auto;
    margin: 20px auto;
    padding: 2px;
    border-radius: 2px;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}
#createExerciseButton{
    
    height: 10px;
    margin: 20px;
    padding: 2px;
    border-radius: 2px;
    display: block;
    margin-left: 85px;
    /* margin-right: auto; */
    /* width: 50%; */
}

.CustomExerciseListCSS{
    background-image: url("https://thefourpercent.com/wp-content/uploads/2015/07/SJ-background.jpg");
    background-repeat: no-repeat;
    background-position-x: 5em;
    background-position-y: 16em;
    background-attachment: fixed; 
    background-size: 60em;
}
#CustomExerciseListTEXT{
    color: rgb(0, 0, 0);
    height: auto;
    margin: 20px auto;
    padding: 2px;
    border-radius: 2px;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

